Creating the About Page for TechCon 2024 Conference Website

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -18,16 +18,27 @@
     </header>
     <main>
       <article>
+        <h1>History</h1>
+        <p>Our company was established on 1993 at the end of November</p>
         <img
           style="width: 450px; height: 250px"
           src="./4f2754deffad4462807f2dc5867fe753.jpg"
           alt="our homeland"
         />
+      </article>
+      <article>
+        <h1>Mission</h1>
+        <p>We will help all our clients</p>
         <img
           style="width: 450px; height: 250px"
           src="./IMG_20211222_073347_9.jpg"
           alt="site field"
         />
+      </article>
+      <article>
+        <h1>Past Speakers</h1>
+        <p>How we celebrate our success</p>
+        <img src="/1c89fba4ef774402822d20df637824e2.jpg" alt="Leo Messi" />
       </article>
     </main>
     <footer>
