Designing the Schedule Page for TechCon 2024 Conference Website

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -38,7 +38,11 @@
       <article>
         <h1>Past Speakers</h1>
         <p>How we celebrate our success</p>
-        <img src="/1c89fba4ef774402822d20df637824e2.jpg" alt="Leo Messi" />
+        <img
+          style="width: 450px; height: 250px"
+          src="/1c89fba4ef774402822d20df637824e2.jpg"
+          alt="Leo Messi"
+        />
       </article>
     </main>
     <footer>
